Add module "fiches"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,14 @@
   <div class="alert alert-dark" role="alert">
     Ceci est un bandeau d'info !
   </div>
-  <h2>Les mobylettes</h2>
+  <!-- Ceci constitue le corp de la page -->
+  <app-fiche></app-fiche>
+
+
+  <!--   <h2>Les mobylettes</h2>
   <div class="card-deck row-cols-md-3">
     <app-mob *ngFor="let mobs of mobs" [mobName]="mobs.name" [mobStatus]="mobs.status" [mobDesc]="mobs.desc"
       [mobPrice]="mobs.price">
     </app-mob>
-  </div>
+  </div> -->
 </div>
