--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,20 @@
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">
-    <img src="/assets/img/MobyWEB.svg" width="40" height="40" class="d-inline-block align-top" alt="">
-    <a class="navbar-brand pl-2" href="#">MobyWEB™</a>
-  </a>
-</nav>
-<div class="container">
-  <div class="alert alert-dark" role="alert">
-    Ceci est un bandeau d'info !
-  </div>
+<mat-toolbar color="primary">
+  <img src="/assets/img/MobyWEB.svg" width="40" height="40">
+  <h1>MobyWEB™</h1>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="material-icons" aria-label="Example icon-button with menu icon">
+    <mat-icon>account_circle</mat-icon>
+  </button>
+</mat-toolbar>
+
   <!-- Ceci constitue le corp de la page -->
-  <app-fiche></app-fiche>
+  <!-- <app-fiche></app-fiche> -->
+<app-connexion></app-connexion>
 
-
-  <!--   <h2>Les mobylettes</h2>
+<!-- <h1>Les mobylettes</h1>
   <div class="card-deck row-cols-md-3">
     <app-mob *ngFor="let mobs of mobs" [mobName]="mobs.name" [mobStatus]="mobs.status" [mobDesc]="mobs.desc"
       [mobPrice]="mobs.price">
     </app-mob>
-  </div> -->
-</div>
+  </div>
+</div> -->
