--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,18 +1,17 @@
-<div class="container">
-    <div class="vertical-center">
-        <form class="example-form">
-            <mat-form-field class="example-full-width">
-                <mat-label>Nom d'utilisateur</mat-label>
-                <input matInput value="">
-            </mat-form-field>
-            <br>
-            <mat-form-field class="example-full-width">
-                <mat-label>Mot de passe</mat-label>
-                <input matInput type="password" placeholder="Password">
-            </mat-form-field>
-            <br>
+<div class="vertical-center text-center">
+    <h1>Se connecter</h1>
+    <form class="example-form">
+        <mat-form-field class="example-full-width">
+            <mat-label>Nom d'utilisateur</mat-label>
+            <input matInput value="">
+        </mat-form-field>
+        <br>
+        <mat-form-field class="example-full-width">
+            <mat-label>Mot de passe</mat-label>
+            <input matInput type="password" placeholder="Password">
+        </mat-form-field>
+        <br>
 
-            <button mat-flat-button color="primary">Connexion</button>
-        </form>
-    </div>
+        <button mat-flat-button color="primary">Connexion</button>
+    </form>
 </div>
