Add Docker and CI

--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -12,6 +12,6 @@
         </mat-form-field>
         <br>
 
-        <button mat-flat-button color="primary">Connexion</button>
+        <button mat-flat-button color="primary" lass="example-full-width">Connexion</button>
     </form>
 </div>
