--- a/src/app/fiche/fiche.component.html
+++ b/src/app/fiche/fiche.component.html
@@ -16,23 +16,14 @@
         <div class="col">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Peugeot_Cyclomoteur_BB_%281957%29.jpg/800px-Peugeot_Cyclomoteur_BB_%281957%29.jpg"
                 class="img-fluid" alt="Responsive image">
-            <figcaption class="figure-caption">Image non contractuelle. Le produit réél est peut-être plus rouillé.
-            </figcaption>
+            <button mat-flat-button color="primary" class="example-fluid">Reserver</button>
         </div>
         <div class="col">
             <div class="row ">
-                <h5>{{ mobPrice }}</h5>
+                <h1>{{ mobPrice }}</h1>
             </div>
             <div class="row">
-                <h6> {{ mobDesc }}</h6>
-            </div>
-            <div class="row align-items-end">
-                <div class="col">
-                    <button type="button" class="btn btn-primary btn-lg">Large button</button>
-                </div>
-                <div class="col">
-                    <button type="button" class="btn btn-secondary btn-lg">Large button</button>
-                </div>
+                <h2> {{ mobDesc }}</h2>
             </div>
         </div>
     </div>
