--- a/src/app/fiche/fiche.component.html
+++ b/src/app/fiche/fiche.component.html
@@ -16,7 +16,7 @@
         <div class="col">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Peugeot_Cyclomoteur_BB_%281957%29.jpg/800px-Peugeot_Cyclomoteur_BB_%281957%29.jpg"
                 class="img-fluid" alt="Responsive image">
-            <button mat-flat-button color="primary" class="example-fluid">Reserver</button>
+            <button mat-raised-button color="primary" class="example-fluid">Reserver</button>
         </div>
         <div class="col">
             <div class="row ">
