--- a/src/app/mob/mob.component.html
+++ b/src/app/mob/mob.component.html
@@ -20,5 +20,5 @@
         </div>
 
     </div>
-    <button mat-raised-button color="primary" routerLink="/fiche" routerLinkActive="active">Réserver</button>
+    <button mat-raised-button color="blue" routerLink="/fiche" routerLinkActive="active">Réserver</button>
 </div>
