--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,7 @@ $MobyWEB-theme: mat-light-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-raised-button.mat-blue, .mat-flat-button.mat-blue {
+  background-color: #36373c;
+  color: #dadeff;
+}
