Add fiche&API connexion

--- a/src/app/fiche/fiche.component.html
+++ b/src/app/fiche/fiche.component.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1>{{ mobName }} </h1>
+            <h1>{{ mobylettes.name }} </h1>
         </div>
         <div class="col text-right">
             <h2><span class="badge" [ngClass]="{
-            'badge-danger':   mobStatus === 'Indisponible',
-            'badge-success':  mobStatus === 'Disponible',
-            'badge-default':  mobStatus === 'En attente' }">
-                    {{ mobStatus }}</span></h2>
+            'badge-danger':   mobylettes.status === 'Indisponible',
+            'badge-success':  mobylettes.status === 'Disponible',
+            'badge-default':  mobylettes.status === 'En attente' }">
+                    {{ mobylettes.status }}</span></h2>
         </div>
     </div>
 
@@ -20,10 +20,10 @@
         </div>
         <div class="col">
             <div class="row ">
-                <h1>{{ mobPrice }}</h1>
+                <h1>{{ mobylettes.price }}</h1>
             </div>
             <div class="row">
-                <h2> {{ mobDesc }}</h2>
+                <h2> {{ mobylettes.desc }}</h2>
             </div>
         </div>
     </div>
