--- a/src/app/mob/mob.component.html
+++ b/src/app/mob/mob.component.html
@@ -18,7 +18,6 @@
                 <span class="card-text font-weight-bold">{{ mobPrice}}</span>
             </h4>
         </div>
-
     </div>
-    <button mat-raised-button color="blue" routerLink="/fiche" routerLinkActive="active">Réserver</button>
+    <button mat-raised-button color="blue" routerLink="/fiche/{{mobId}}" routerLinkActive="active">Réserver</button>
 </div>
