--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <h1>Les mobylettes</h1>
     <div class="card-deck row-cols-md-3">
-        <app-mob *ngFor="let mobylettes of mobylettes" [mobName]="mobylettes.name" [mobStatus]="mobylettes.status" [mobDesc]="mobylettes.desc"
-            [mobPrice]="mobylettes.price">
+        <app-mob *ngFor="let mobylettes of mobylettes" [mobName]="mobylettes.name" [mobStatus]="mobylettes.status" 
+        [mobDesc]="mobylettes.desc" [mobPrice]="mobylettes.price">
         </app-mob>
     </div>
 </div>
