Correct fiche display problem

--- a/src/app/mob/mob.component.html
+++ b/src/app/mob/mob.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-3">
     <img class="card-img-top"
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Peugeot_Cyclomoteur_BB_%281957%29.jpg/800px-Peugeot_Cyclomoteur_BB_%281957%29.jpg"
+        src="/assets/img/mobs/{{mobId}}.jpg"
         alt="Erreur iamge">
     <div class="card-body">
         <h2>{{ mobName }}</h2>
