--- a/src/app/fiche/fiche.component.html
+++ b/src/app/fiche/fiche.component.html
@@ -1,30 +1,31 @@
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <h1>{{mobylette.name}}</h1>
-        </div>
-        <div class="col text-right">
-            <h2><span class="badge" [ngClass]="{
+        <div class="row">
+            <div class="col">
+                <h1>{{mobylette.name}}</h1>
+            </div>
+            <div class="col text-right">
+                <h2><span class="badge" [ngClass]="{
                 'badge-danger':   mobylette.status==='Indisponible' , 
                 'badge-success' : mobylette.status==='Disponible' , 
                 'badge-default' : mobylette.status==='En attente' }">
-                    {{mobylette.status}}</span></h2>
+                        {{mobylette.status}}</span></h2>
+            </div>
         </div>
-    </div>
 
-    <div class="row">
-        <div class="col">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/Peugeot_Cyclomoteur_BB_%281957%29.jpg/800px-Peugeot_Cyclomoteur_BB_%281957%29.jpg"
+        <div class="row">
+            <div class="col">
+                <img 
+                src="/assets/img/mobs/{{mobylette._id}}.jpg"
                 class="img-fluid" alt="Responsive image">
-            <button mat-raised-button color="blue" class="example-fluid">Reserver</button>
-        </div>
-        <div class="col">
-            <div class="row ">
-                <h1>{{ mobylette.price }}</h1>
+                <button mat-raised-button color="blue" class="example-fluid">Reserver</button>
             </div>
-            <div class="row">
-                <h2> {{ mobylette.desc }}</h2>
+            <div class="col">
+                <div class="row ">
+                    <h1>{{ mobylette.price }}</h1>
+                </div>
+                <div class="row">
+                    <h2> {{ mobylette.desc }}</h2>
+                </div>
             </div>
         </div>
     </div>
-</div>
