link API - Front ok

--- a/front/src/app/mob/mob.component.html
+++ b/front/src/app/mob/mob.component.html
@@ -1,7 +1,6 @@
 <div class="card mb-3">
     <img class="card-img-top"
-        src="/assets/img/mobs/{{mobId}}.jpg"
-        alt="Erreur iamge">
+        src="/assets/img/mobs/{{mobId}}.jpg" onerror="this.onerror=null; this.src='/assets/img/MobyWEB_grey.svg'" alt="Mobs"/> 
     <div class="card-body">
         <h2>{{ mobName }}</h2>
         <p>{{ mobDesc}}</p>
